# dyndns-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  config.toml
.github/workflows/: main.yml  rust.yml
ci/: before_deploy.sh
src/: authentication_data.rs  dns_record_list.rs  error.rs  ips.rs  main.rs  retry_handler.rs
src/godaddy/: authority.rs  dns_data.rs  dns_record.rs  mod.rs  predefined_url.rs  record_type.rs
src/godaddy_handler/: authentication_data.rs  godaddy_handler.rs  mod.rs  record_specification.rs
src/lib/: error.rs  mod.rs  predefined_url.rs  record_type.rs
src/lib/godaddy/: authentication_data.rs  authority.rs  dns_data.rs  dns_record.rs  error.rs  handler.rs  mod.rs  record_specification.rs
src/lib/update_handler/: mod.rs  update_handler.rs
src/lib/ydns/: authentication_data.rs  error.rs  handler.rs  mod.rs  record_specification.rs
src/update_handler/: mod.rs  update_handler.rs
src/ydns/: authentication_data.rs  handler.rs  mod.rs  record_specification.rs
