[package]
name = "dyndns-service-godaddy"
version = "0.1.0"
authors = ["Andreas Weinzierl <20560137+aWeinzierl@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.19.2"
strum_macros = "0.19.2"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
public-ip = "0.2"
futures-retry = "0.5.0"
preferences = { git = "https://github.com/Eh2406/preferences-rs", branch = "patch-1" }
url = { version = "2.1.1", features = ["serde"] }
serde_urlencoded = "0.7.0"
tokio = { version = "0.2.22", features = ["macros"] }
async-trait = "0.1.40"

[lib]
name = "godaddy"
path = "src/godaddy/mod.rs"

